[package]
name = "solana_nft_staking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.1"
num-derive = "0.3"
thiserror = "1.0"
borsh = "0.9.1"
num-traits = "0.2"
num_enum = "0.5.4"
arrayref = "0.3.6"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.1", features = ["no-entrypoint"] }
switchboard-aggregator = "0.1.6"

[dev-dependencies]
solana-program-test = "1.9.3"
solana-sdk = "1.9.3"
serde = "1"
bincode = "1.3"

[lib]
crate-type = ["cdylib", "lib"]